--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>COLOCAR 3 VÍDEOS DO YOUTUBE COM SEUS RESPECTIVOS TÍTULOS</h1>
-
+    <h1 class="primeiro-titulo">COLOCAR 3 VÍDEOS DO YOUTUBE COM SEUS RESPECTIVOS TÍTULOS</h1>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/SHA-XPa6pHg?si=8fwSZ3qM6EqtYAhj" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <h1 class="segundo-titulo">OUTRO TITULO, MEU CARO</h1>
 </body>
 </html>
