--- a/index.html
+++ b/index.html
@@ -7,17 +7,20 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header> <!--* CABEÇALHO-->
-        <h1>Catálogo de Vídeos</h1>
+    <header class="cabecalho">
+        <h1 class="primeiro-titulo">Catálogo de filmes</h1>  
         <nav>
-            <a href="#"> HOME </a>
-            <a href="#"> SOBRE NÓS </a>
+            <a href="#"> Home </a>   
+            <a href="#">Sobre Nós</a> 
         </nav>
-    </header> <!-- * CRIAR ESTE HEADER E NAVEGATION E CENTRALIZAR
-    * JUNTAMENTE COM O TÍTULO E COLOCAR A COR DO LINK IGUAL A COR
-    * DE TODOS OS TEXTOS DO SITE-->
-    <h1 class="primeiro-titulo">COLOCAR 3 VÍDEOS DO YOUTUBE COM SEUS RESPECTIVOS TÍTULOS</h1>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/SHA-XPa6pHg?si=8fwSZ3qM6EqtYAhj" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    <h1 class="segundo-titulo">OUTRO TITULO, MEU CARO</h1>
+    </header>
+    <main>
+        <h3>Review Interestelar</h3>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/BHsFzDON6pA?si=j1sLxhXYjSMjXWsa" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </main>
+
+    <footer>
+        Produzido por Fulano e Beltrano
+    </footer>
 </body>
 </html>
